# fastapi_service

./: .gitignore  Dockerfile  docker-compose.yml  grafana-dashboard.json  pyproject.toml
app/: main.py
app/api/: celery_tasks.py  pages.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  bookings.py  hotels.py  images.py  importer.py  rooms.py
app/core/: admin_auth.py  admin_views.py  auth.py  celery.py  config.py  dependencies.py
app/db/: session.py
app/migrations/: env.py
app/migrations/versions/: 5ae38d7708f3_first_update_db.py  805aec8bd6ba_update_db.py  902fc6488386_initial_migration.py
app/models/: bookings_model.py  hotels_model.py  rooms_model.py  users_model.py
app/pages/: base.py
app/schemas/: booking_schema.py  hotels_schema.py  response_schema.py  rooms_schema.py
app/services/: base_service.py  bookings_service.py  hotels_service.py  rooms_services.py  users_service.py
app/tests/: conftest.py  mock_users.json
app/tests/integration_tests/test_bookings/: test_bookings_api.py  test_service.py
app/tests/integration_tests/test_hotels/: test_hotels_api.py
app/tests/integration_tests/test_users/: test_users_api.py
app/tests/unit_tests/test_hotels/: test_service.py
app/tests/unit_tests/test_users/: test_servise.py
app/utils/: email_templates.py  exeptions.py  logger.py  utils.py
docker/: celery.sh
